<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_14dp"
    android:background="@drawable/item_bg"
    android:orientation="horizontal"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.25"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10dp">

        <ImageView
            android:id="@+id/iv_item_pic"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/item_name"
            android:textAlignment="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_item_category"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/categories" />

    <TextView
        android:id="@+id/tv_item_price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="@string/price" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.25"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp">

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/delete_icon" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/edit_button" />

    </LinearLayout>

</LinearLayout>